# handwriting_gen

./: .gitignore  README.md  generate.py  pyproject.toml  train.py
configs/: iam.yml
data_loader/: dataset.py
models/: diffusion.py  encoder.py  loss.py  resnet_dilation.py  transformer.py  unet.py
utils/: config.py  helpers.py
